# tic-tac-toe

./: .gitignore  Cargo.toml  vimrc
resources/config/: bindings.ron  display.ron
resources/spritesheets/: spritesheet.ron
src/: main.rs  player.rs  resource_helpers.rs  settings.rs
src/components/: cell.rs  grid.rs  mod.rs
src/states/: game.rs  mod.rs  won.rs
src/systems/: check_win.rs  mod.rs  toggle_cell.rs
