[package]
name = "tictactoe"
version = "1.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.10.0"
deathframe = "0.0.0"

[replace]
"lewton:0.9.4" = { git = "https://github.com/Noah2610/lewton", branch = "custom-0.9.3" } # cross-compilation to windows doesn't work with lewton 0.9.4
